tests/ui/unsafe/ranged_ints4.rs
// revisions: mirunsafeck thirunsafeck
// [thirunsafeck]compile-flags: -Z thir-unsafeck

#![feature(rustc_attrs)]

#[rustc_layout_scalar_valid_range_start(1)]
#[repr(transparent)]
pub(crate) struct NonZero<T>(pub(crate) T);
fn main() {
    let mut x = unsafe { NonZero(1 as _) };
    x.0 = 0 as _; //~ ERROR mutation of layout constrained field is unsafe
}
